# docs/swagger.yaml
@@ -11,6 +11,25 @@ info:
   title: 在线练习系统
   version: "1.0"
 paths:
+  /login:
+    post:
+      parameters:
+        - description: 用户名称username
+          in: formData
+          name: username
+          type: string
+        - description: 用户密码password
+          in: formData
+          name: password
+          type: string
+      responses:
+        "200":
+          description: '{"code":200,"data":{},"msg":"ok"}'
+          schema:
+            type: string
+      summary: 用户登录
+      tags:
+        - 公共接口
   /problem-list:
     get:
       parameters:
